--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -21,6 +22,8 @@
     "cogs-transformer-underscore-template": "^1.1.0",
     "eslint": "^4.19.1",
     "eslint-config-coderiety": "^1.0.0",
+    "eslint-plugin-babel": "^5.0.0",
+    "eslint-plugin-flowtype": "^2.46.2",
     "eslint-plugin-react": "^7.6.1",
     "watchy": "^0.9.3"
   },
